--- a/.github / workflows/main.yml
+++ b/.github / workflows/main.yml
@@ -17,5 +17,10 @@ jobs:
       run: npm install
     - name: Run test
       run: npm test
+      - name: Run app
+      run: node app.js
+
+    - name: test runner
+      run:  ./run.cmd
     - name: Run app
       run: node app.js
