--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Run test
-      run: node app.js
+      run: npm run build
