--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest src/app.test.js",
-    "start": "node src"
+    "start": "npm start src/app.js"
   },
   "author": "",
   "license": "ISC",
